--- a/src/components/vues/More/More.module.scss
+++ b/src/components/vues/More/More.module.scss
@@ -83,12 +83,26 @@
   grid-gap: 10px;
   align-items: center;
   // Pour le speeddial
-  padding-bottom: 12px; 
+  padding-bottom: 12px;
 
   // TODO CHECK IF OK
   max-width: 1200px;
   margin: auto;
   // ENDOF TODO
+
+  @include mobile_large {
+    display: block;
+  }
+}
+
+.list_container {
+  display: block;
+  align-items: center;
+  // Pour le speeddial
+  padding-bottom: 12px;
+
+  max-width: 1200px;
+  margin: auto;
 
   @include mobile_large {
     display: block;
@@ -119,7 +133,7 @@
 
 .icon {
   color: lighten($color: #000000, $amount: 70);
-  font-size: 7rem !important; 
+  font-size: 7rem !important;
 }
 
 .toggleContainer {
